--- a/indexs.html
+++ b/indexs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>  Damascus coffe</title>
+    <title>  mido coffe</title>
     <link rel="stylesheet" href="stylie.css">
      
     <!--lisäsin tänne fontawesome font teksi-->
