--- a/tilaa.html
+++ b/tilaa.html
@@ -11,7 +11,7 @@
 
         <h1> Dmaskus coffe</h1>
         <ul>
-            <li><a href="indexs.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li> <a href="menu.html">menu</a></li>
             <li><a href="tilaa.html">tilaa</a></li>
             <li><a href="galleria.html">galleria</a></li>
