--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#menu">Menu</a></li>
-          <li><a href="#Tilaa">Tilaa</a></li>
+          <li><a href="#tilaa">Tilaa</a></li>
           <li><a href="#Galleria">Galleria</a></li>
-          <li><a href="#Yhteystiedot">Yhteystiedot</a></li>
+          <li><a href="#yhteystiedot">Yhteystiedot</a></li>
         </ul>
       </nav>
     </header>  
@@ -36,13 +36,12 @@
         <div class="container">
           <div class="home-content">
             <div class="container-text">
-              <h3> Black coffee is awesome.</h3>
-              <h1>TIME DISCOVER COFFEE HOUSE</h1>
-              <P>we care about quality and sustainability, sourcing ethically and using 
-                eco-friendly practices-because
-                  great coffee should make a difference.</P>
+              <h3> Musta kahvi on mahtavaa</h3>
+              <h1>Hyvä kahvi tekee päivästä paremman</h1>
+              <P>Meillä kahvi tehdään rakkaudesta laatuun ja luontoon. Siksi 
+                käytämme vain eettisesti hankittuja papuja ja ympäristöystävällisiä menetelmiä.</P>
 
-                  <a href="#" class="btn"> Explore More <i class="fa-solid fa-cart-shopping"></i></a>
+                  <a href="#" class="btn"> tutkia lisää <i class="fa-solid fa-cart-shopping"></i></a>
             </div>
             <img src="./kuvat/coffee-home.png" alt="coffee home">
           </div>
@@ -140,7 +139,7 @@
   </div>
 </section>
 
-<section id="yhteystiedot">
+<section id="tilaa">
   <div class="container">
     <div class="heading">
      <h1><span class="text-primary">tilauslomake </span></h1>
@@ -165,7 +164,7 @@
     </div>
   </div>
 </section>
-<footer id="footer">
+<footer id="yhteystiedot">
   <div class="footer-top">
     <div class="container">
       <div class="row">
